include_directories(../src)

add_executable(sample_regression_sin sample_regression_sin.cpp  )
target_link_libraries(sample_regression_sin libBeeDNN)

add_executable(sample_classification_MNIST sample_classification_MNIST.cpp  )
target_link_libraries(sample_classification_MNIST libBeeDNN)

add_executable(sample_classification_BatchNorm_MNIST sample_classification_BatchNorm_MNIST.cpp  )
target_link_libraries(sample_classification_BatchNorm_MNIST libBeeDNN)

add_executable(sample_MetaOptimizer_MNIST sample_MetaOptimizer_MNIST.cpp  )
target_link_libraries(sample_MetaOptimizer_MNIST libBeeDNN)

add_executable(sample_KMeans_MNIST sample_KMeans_MNIST.cpp  )
target_link_libraries(sample_KMeans_MNIST libBeeDNN)

add_executable(sample_classification_xor sample_classification_xor.cpp  )
target_link_libraries(sample_classification_xor libBeeDNN)

add_executable(sample_classification_MNIST_TimeSeries sample_classification_MNIST_TimeSeries.cpp  )
target_link_libraries(sample_classification_MNIST_TimeSeries libBeeDNN)

add_executable(sample_classification_MNIST_poolmax2D sample_classification_MNIST_poolmax2D.cpp  )
target_link_libraries(sample_classification_MNIST_poolmax2D libBeeDNN)

add_executable(sample_classification_MNIST_allconvolutional sample_classification_MNIST_allconvolutional.cpp  )
target_link_libraries(sample_classification_MNIST_allconvolutional libBeeDNN)

add_executable(sample_classification_CIFAR10 sample_classification_CIFAR10.cpp  )
target_link_libraries(sample_classification_CIFAR10 libBeeDNN)