set(BEEDNN_FILES
	Activations.cpp Activations.h
	CIFAR10Reader.cpp CIFAR10Reader.h
	ConfusionMatrix.cpp ConfusionMatrix.h
	CsvFileReader.cpp CsvFileReader.h
	DataSource.cpp DataSource.h
	Initializers.cpp Initializers.h
	JsonFile.cpp JsonFile.h
	KMeans.cpp KMeans.h
	KMeansTrain.cpp KMeansTrain.h
	Layer.cpp Layer.h
	LayerActivation.cpp LayerActivation.h
	LayerAffine.cpp LayerAffine.h
	LayerAveragePooling2D.cpp LayerAveragePooling2D.h
	LayerBias.cpp LayerBias.h
	LayerChannelBias.cpp LayerChannelBias.h
	LayerConvolution2D.cpp LayerConvolution2D.h
	LayerCRelu.cpp LayerCRelu.h
	LayerDense.cpp LayerDense.h
	LayerDot.cpp LayerDot.h
	LayerDropout.cpp LayerDropout.h
	LayerFactory.cpp LayerFactory.h
	LayerGain.cpp LayerGain.h
	LayerGaussianDropout.cpp LayerGaussianDropout.h
	LayerGaussianNoise.cpp LayerGaussianNoise.h
	LayerGlobalAffine.cpp LayerGlobalAffine.h
	LayerGlobalAveragePooling2D.cpp LayerGlobalAveragePooling2D.h
	LayerGlobalBias.cpp LayerGlobalBias.h
	LayerGlobalGain.cpp LayerGlobalGain.h
	LayerGlobalMaxPool2D.cpp LayerGlobalMaxPool2D.h
	LayerMaxPool2D.cpp LayerMaxPool2D.h
	LayerPELU.cpp LayerPELU.h
	LayerPRelu.cpp LayerPRelu.h
	LayerRandomFlip.cpp LayerRandomFlip.h
	LayerRNN.cpp LayerRNN.h
	LayerRRelu.cpp LayerRRelu.h
	LayerSimpleRNN.cpp LayerSimpleRNN.h
	LayerSimplestRNN.cpp LayerSimplestRNN.h
	LayerSoftmax.cpp LayerSoftmax.h
	LayerSoftmin.cpp LayerSoftmin.h
	LayerTERELU.cpp LayerTERELU.h
	LayerTimeDistributedBias.cpp LayerTimeDistributedBias.h
	LayerTimeDistributedDense.cpp LayerTimeDistributedDense.h
	LayerTimeDistributedDot.cpp LayerTimeDistributedDot.h
	LayerUniformNoise.cpp LayerUniformNoise.h
	LayerZeroPadding2D.cpp LayerZeroPadding2D.h
	Loss.cpp Loss.h
	Matrix.cpp Matrix.h
	MetaOptimizer.cpp MetaOptimizer.h
	MinMaxScaler.cpp MinMaxScaler.h
	MNISTReader.cpp MNISTReader.h
	Net.cpp Net.h
	NetTrain.cpp NetTrain.h
	NetUtil.cpp NetUtil.h
	Optimizer.cpp Optimizer.h
	Regularizer.cpp Regularizer.h
	StandardScaler.cpp StandardScaler.h
)
include_directories(.)
add_library( libBeeDNN STATIC ${BEEDNN_FILES})